--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "webpack --mode development",
     "dev": "webpack-dev-server",
     "crfull": "node utils/componentCreator --n",
-    "crless": "node utils/componentCreator --s --n"
+    "crless": "node utils/componentCreator --s --n",
+    "serve": "nodemon server"
   },
   "keywords": [],
   "author": "",
@@ -19,9 +20,11 @@
     "@babel/preset-react": "^7.10.4",
     "babel-loader": "^8.1.0",
     "css-loader": "^4.3.0",
+    "express": "^4.17.1",
     "html-webpack-plugin": "^4.4.1",
     "mini-css-extract-plugin": "^0.11.1",
     "minimist": "^1.2.5",
+    "nodemon": "^2.0.4",
     "react-addons-update": "^15.6.2",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
@@ -44,5 +47,8 @@
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
     "redux-api-middleware": "^3.2.1"
+  },
+  "nodemonConfig": {
+    "ignore": "*.json"
   }
 }
